--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,7 @@
     "jsx": "react-jsx",
     "types": ["node"]
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+{
+  "include": ["**/*.ts", "**/*.tsx", "env.d.ts"]
+}
 }
