--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,22 @@
+
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
     "skipLibCheck": true,
-
-    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    "strict": true,
-    "types": ["vite/client"]
+    "types": ["node"]
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts"]
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
